--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                 <span>Colori selezionati</span>
                 <div id="buttons-container">
                     <button id="export-palette-btn" title="Esporta i colori come immagine">Esporta palette</button>
-                    <button id="export-btn" title="Esporta i colori come testo">Esporta</button>
+                    <button id="export-btn" title="Esporta i colori come testo">Esporta codici</button>
                 </div>
             </div>
             <div id="color-list"></div>
